--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <ul class="slides-container">
           <!-- Start single slider-->
           <li>
-            <img src="img/welcome2gif_resized.gif" alt="img">
+            <img src="img/sl22.jpg" alt="img">
             <div class="slider_caption">
               <h2></h2>
               <p></p>
