--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html"> Tekmeda</a>
-        <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
+         <!--<a class="navbar-brand" href="index.html"><img src="img/sww.png" alt="logo"></a>-->
       </div>
       <div id="navbar" class="navbar-collapse collapse navbar_area">          
         <ul class="nav navbar-nav navbar-right custom_nav">
@@ -96,22 +96,22 @@
           </li> 
           <!-- Start single slider-->           
           <li>
-            <img src="img/welcome.jpg" alt="img">
+            <img src="img/sl24.jpg" alt="img">
              <div class="slider_caption">
-              <h2>Evolutionary Innovative Business solution</h2>
-              <p>CRM and SCM integrated specialized service and support.</p>
+             <!-- <h2>Evolutionary Innovative Business solution</h2>
+              <p>CRM and SCM integrated specialized service and support.</p>-->
             
             </div>
             </li>
           <!-- Start single slider-->
-          <li>
+         <!-- <li>
             <img src="img/analytics.jpg" alt="img">
              <div class="slider_caption">
               <h2>Flexible & Corporate</h2>
               <p>Justified, ethical Healthcare and medical business solutions</p>
              
             </div>
-           </li>
+           </li>-->
         </ul>
         <nav class="slides-navigation">
           <a href="#" class="next"></a>
