--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html"> Tekmeda</a>
-         <!--<a class="navbar-brand" href="index.html"><img src="img/sww.png" alt="logo"></a>-->
+      <!--  <a class="navbar-brand" href="index.html"> Tekmeda</a>-->
+       <a class="navbar-brand" href="index.html"><img src="img/logo4.png" alt="logo"></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse navbar_area">          
         <ul class="nav navbar-nav navbar-right custom_nav">
